# PathologyVoiceAgent

./: .gitignore  README.md  agent1.json  agent2.json  agent3.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  bolna_webhook.py  calls.py  dashboard.py  home_collections.py  labs.py  reports.py  router.py  tests.py
backend/app/core/: config.py  security.py
backend/app/db/: supabase.py
backend/app/models/: schemas.py
backend/migrations/: 001_init_schema.sql  002_seed_test_price_master.sql  003_drop_exotel_column_from_lab_settings.sql  README.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ShellLayout.tsx  ToastProvider.tsx
frontend/src/pages/: CallLogs.tsx  HomeCollectionCalendar.tsx  Login.tsx  ReportStatusManager.tsx  Settings.tsx  TestPriceManager.tsx
